css/style.css
/* ... */
#qbootstrap-slider-hero .flexslider .slides {
  position: relative;
  overflow: hidden;
}
#qbootstrap-slider-hero .flexslider .slides li {
  background-repeat: no-repeat;
  background-size: cover;
  background-position: top center;
  min-height: 770px;
  position: relative;
}
#qbootstrap-slider-hero .flexslider .slides li:after {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  content: '';
  background: rgba(0, 0, 0, 0.4);
  z-index: 1;
}
#qbootstrap-slider-hero .flexslider .flex-control-nav {
  bottom: 7em;
  z-index: 1000;
}
#qbootstrap-slider-hero .flexslider .flex-control-nav li a {
  background: rgba(255, 255, 255, 0.5);
  box-shadow: none;
  width: 12px;
  height: 12px;
  cursor: pointer;
}
#qbootstrap-slider-hero .flexslider .flex-control-nav li a.flex-active {
  cursor: pointer;
  background: #ff847c;
}
#qbootstrap-slider-hero .flexslider .flex-direction-nav {
  display: none;
}
#qbootstrap-slider-hero .flexslider .slider-text {
  display: table;
  opacity: 0;
  min-height: 800px;
  z-index: 9;
}
#qbootstrap-slider-hero .flexslider .slider-text > .slider-text-inner {
  display: table-cell;
  vertical-align: middle;
  height: 800px;
}
#qbootstrap-slider-hero .flexslider .slider-text > .slider-text-inner h1, #qbootstrap-slider-hero .flexslider .slider-text > .slider-text-inner h2 {
  margin: 0;
  padding: 0;
  color: white;
}
#qbootstrap-slider-hero .flexslider .slider-text > .slider-text-inner h1 {
  margin-bottom: 20px;
  font-size: 80px;
  line-height: 1.3;
  font-weight: 300;
}
@media screen and (max-width: 768px) {
  #qbootstrap-slider-hero .flexslider .slider-text > .slider-text-inner h1 {
    font-size: 30px;
  }
}
#qbootstrap-slider-hero .flexslider .slider-text > .slider-text-inner .holder {
  color: #fff;
  font-family: "Source Sans Pro", Arial, sans-serif;
  font-size: 18px;
  text-transform: uppercase;
  letter-spacing: 10px;
  font-weight: 400;
}
#qbootstrap-slider-hero .flexslider .slider-text > .slider-text-inner .holder span {
  position: relative;
}
#qbootstrap-slider-hero .flexslider .slider-text > .slider-text-inner .holder span:before, #qbootstrap-slider-hero .flexslider .slider-text > .slider-text-inner .holder span:after {
  position: absolute;
  top: 49%;
  width: 100px;
  height: 2px;
  background: #fff;
  content: '';
}
#qbootstrap-slider-hero .flexslider .slider-text > .slider-text-inner .holder span:before {
  left: -110px;
}
#qbootstrap-slider-hero .flexslider .slider-text > .slider-text-inner .holder span:after {
  right: -110px;
}
@media screen and (max-width: 768px) {
  #qbootstrap-slider-hero .flexslider .slider-text > .slider-text-inner .holder {
    letter-spacing: 2px;
  }
  #qbootstrap-slider-hero .flexslider .slider-text > .slider-text-inner .holder span {
    position: relative;
  }
  #qbootstrap-slider-hero .flexslider .slider-text > .slider-text-inner .holder span:before, #qbootstrap-slider-hero .flexslider .slider-text > .slider-text-inner .holder span:after {
    width: 50px;
    height: 2px;
  }
  #qbootstrap-slider-hero .flexslider .slider-text > .slider-text-inner .holder span:before {
    left: -60px;
  }
  #qbootstrap-slider-hero .flexslider .slider-text > .slider-text-inner .holder span:after {
    right: -60px;
  }
}
#qbootstrap-slider-hero .flexslider .slider-text > .slider-text-inner h2 {
  font-size: 20px;
  line-height: 1.5;
  margin-bottom: 40px;
  font-family: "Source Sans Pro", Arial, sans-serif;
}
#qbootstrap-slider-hero .flexslider .slider-text > .slider-text-inner h2 a {
  color: rgba(255, 255, 255, 0.5);
}
#qbootstrap-slider-hero .flexslider .slider-text > .slider-text-inner .date {
  color: #fff;
  font-weight: 400;
  font-size: 24px;
  letter-spacing: 10px;
}
#qbootstrap-slider-hero .flexslider .slider-text > .slider-text-inner .date span {
  padding: 5px 20px;
  border: 1px solid #fff;
}
#qbootstrap-slider-hero .flexslider .slider-text > .slider-text-inner .btn {
  padding: 18px 30px !important;
  color: #fff;
  border: none !important;
  font-size: 12px;
  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: 2px;
}
#qbootstrap-slider-hero .flexslider .slider-text > .slider-text-inner .btn:hover {
  background: #FF847C !important;
  -webkit-box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75) !important;
  -moz-box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75) !important;
  box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75) !important;
}

#qbootstrap-couple img {
  margin-bottom: 20px;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  border-radius: 50%;
}
#qbootstrap-couple h3 {
  font-size: 34px;
  font-family: "Clicker Script", cursive;
  color: #FF847C;
}
@media screen and (max-width: 768px) {
  #qbootstrap-couple h3 {
    font-size: 35px;
  }
}
#qbootstrap-couple span {
  color: #FF847C;
  letter-spacing: 10px;
  text-transform: uppercase;
  font-size: 14px;
  border: 1px solid rgba(255, 132, 124, 0.3);
  padding: 2px 5px;
}
#qbootstrap-couple .amp-center {
  font-size: 60px;
  margin-top: 100%;
  color: #ff847c;
}
@media screen and (max-width: 768px) {
  #qbootstrap-couple .amp-center {
    font-size: 40px;
  }
}
#qbootstrap-couple .amp-center .colored .svg {
  fill: #FF847C;
}

.qbootstrap-bg {
  background-size: cover;
  position: relative;
  background-repeat: no-repeat;
}

#qbootstrap-countdown {
  background-size: cover;
  position: relative;
  background-repeat: no-repeat;
  z-index: 0;
  width: 100%;
}
#qbootstrap-countdown .section-heading {
  margin-bottom: 0 !important;
}
#qbootstrap-countdown .section-heading h2 {
  color: #fff;
}
@media screen and (max-width: 768px) {
  #qbootstrap-countdown .section-heading h2 {
    font-size: 30px;
  }
}
#qbootstrap-countdown .section-heading .datewed {
  font-size: 24px;
  color: rgba(255, 255, 255, 0.7);
}
#qbootstrap-countdown .section-heading.svg-sm .svg {
  height: 180px;
  margin-bottom: -50px;
  padding: 0;
}
#qbootstrap-countdown .section-heading.colored .svg {
  fill: #fff;
}
/* ... */

